--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        
+        <script src="js/script.js" type="text/javascript"></script>
     </body>
 </html>
